--- a/app/src/main/res/layout/content_user_info_form.xml
+++ b/app/src/main/res/layout/content_user_info_form.xml
@@ -17,7 +17,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_margin="10dp"
                 app:cardElevation="10dp"
                 app:cardUseCompatPadding="true">
 
