--- a/app/src/main/res/layout/activity_user_info_form.xml
+++ b/app/src/main/res/layout/activity_user_info_form.xml
@@ -24,8 +24,7 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/ic_launcher"
+                android:scaleType="center"
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"/>
 
