--- a/app/src/main/res/layout/content_user_info_form.xml
+++ b/app/src/main/res/layout/content_user_info_form.xml
@@ -11,7 +11,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
 
             <android.support.v7.widget.CardView
@@ -27,7 +27,33 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:hint="Name"
+                        android:ems="10"
+                        android:id="@+id/name"
+                        android:background="#FFF"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"/>
 
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textEmailAddress"
+                        android:hint="Email"
+                        android:ems="10"
+                        android:id="@+id/email"
+                        android:background="#FFF"
+                        android:layout_marginTop="5dp"
+                        android:paddingBottom="5dp"/>
+
+                    <Button
+                        android:id="@+id/submit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Submit"/>
 
                 </LinearLayout>
 
