--- a/app/src/main/res/layout/content_user_info_form.xml
+++ b/app/src/main/res/layout/content_user_info_form.xml
@@ -9,7 +9,8 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-        <FrameLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -60,8 +61,20 @@
 
             </android.support.v7.widget.CardView>
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp" >
 
-        </FrameLayout>
+                <fragment
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/map"
+                    tools:context=".MapsActivity"
+                    android:name="com.google.android.gms.maps.SupportMapFragment" />
+
+                </FrameLayout>
+
+        </LinearLayout>
 
 
     </android.support.v4.widget.NestedScrollView>
